# synth

./: .gitignore  .gitmodules  PRIVACY.md  README.md  build.gradle
.github/workflows/: android.yml  deploy.yml  test.yml
app/: CMakeLists.txt  build.gradle
app/libs/cpp/: CMakeLists.txt
app/libs/cpp/libnativehelper/: CMakeLists.txt
app/libs/cpp/vasvf/: CMakeLists.txt
app/libs/cpp/vasvf/src/: VAStateVariableFilter.h
app/src/androidTest/java/com/flatmapdev/synth/: AppInitializationTest.kt  ExampleInstrumentedTest.kt
app/src/debug/res/drawable/: ic_launcher_background.xml
app/src/debug/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  AudioStream.cpp  AudioStream.h  CMakeLists.txt  Constants.h  Envelope.cpp  Envelope.h  EnvelopeControlledAmplifier.cpp  EnvelopeControlledAmplifier.h  EnvelopeParameters.h  Filter.cpp  Filter.h  LowPassFilter.cpp  LowPassFilter.h  NoiseWaveform.cpp  NoiseWaveform.h  Oscillator.cpp  Oscillator.h  Oscillator_test.cpp  Pitch.h  PlayException.cpp  PlayException.h  SignalSource.h  SineWaveform.cpp  SineWaveform.h  SquareWaveform.cpp  SquareWaveform.h  TriangleWaveform.cpp  TriangleWaveform.h  Waveform.h  native-lib.cpp
app/src/main/cpp/cmake/: list_transform.cmake
app/src/main/cpp/jni/: AmpEnvelopeJni.cpp  AmpEnvelopeJni.h  FilterJni.cpp  FilterJni.h  GlobalComponents.h  Helpers.cpp  Helpers.h  OnLoad.cpp  OscillatorJni.cpp  OscillatorJni.h  Synth.cpp  Synth.h  SynthEngineJni.cpp  SynthEngineJni.h  native-lib.cpp
app/src/main/cpp/jni/model/: Synth.cpp  Synth.h  WaveformType.cpp  WaveformType.h
app/src/main/cpp/synth/: AudioEngine.h  AudioStream.cpp  EnvelopeControlledAmplifier.cpp  Filter.cpp  Filter.h  NoiseWaveform.h  Oscillator.cpp  Pitch.h  SignalSource.h  Waveform.cpp  Waveform.h
app/src/main/java/com/flatmapdev/synth/: MainActivity.kt
app/src/main/java/com/flatmapdev/synth/aboutUi/: AboutFragment.kt  AboutViewModel.kt
app/src/main/java/com/flatmapdev/synth/ampEnvelopeUi/: AmpEnvelopeFragment.kt  AmpEnvelopeViewModel.kt
app/src/main/java/com/flatmapdev/synth/app/: App.kt  CleanUpService.kt
app/src/main/java/com/flatmapdev/synth/controlPanelUi/: ControlPanelFragment.kt  ControlPanelViewModel.kt
app/src/main/java/com/flatmapdev/synth/deviceData/: AndroidDeviceFeaturesAdapter.kt  DeviceDataModule.kt
app/src/main/java/com/flatmapdev/synth/engineData/: EngineDataModule.kt  SynthEngine.kt
app/src/main/java/com/flatmapdev/synth/filterData/: FilterDataModule.kt
app/src/main/java/com/flatmapdev/synth/filterUi/: FilterFragment.kt  FilterViewModel.kt
app/src/main/java/com/flatmapdev/synth/jni/: FirstNativeSynthOscillator.kt  JniModule.kt  NativeSynth.kt  NativeSynthEngine.kt  NativeSynthFilter.kt  NativeSynthOscillator.kt  Pointer.kt  SecondNativeSynthOscillator.kt  Synth.kt  SynthEngine.kt  SynthFilter.kt  SynthOscillator.kt
app/src/main/java/com/flatmapdev/synth/keyboardData/: KeyboardDataModule.kt
app/src/main/java/com/flatmapdev/synth/keyboardShared/: NoteToUiString.kt  ScaleTypeToUiString.kt
app/src/main/java/com/flatmapdev/synth/keyboardUi/: KeyboardFragment.kt  KeyboardViewModel.kt
app/src/main/java/com/flatmapdev/synth/mainUi/: AmpEnvelopeViewModel.kt  KeyboardView.kt  MainActivity.kt  MainFragment.kt  MainViewModel.kt  OscillatorViewModel.kt
app/src/main/java/com/flatmapdev/synth/oscillatorData/: OscillatorDataModule.kt
app/src/main/java/com/flatmapdev/synth/oscillatorShared/: WaveformToUiString.kt
app/src/main/java/com/flatmapdev/synth/oscillatorUi/: OscillatorFragment.kt  OscillatorViewModel.kt
app/src/main/java/com/flatmapdev/synth/synthUi/: KeyboardView.kt  SynthFragment.kt  SynthViewModel.kt
app/src/main/res/drawable/: ic_envelope.xml  ic_filter.xml  ic_launcher_foreground.xml  ic_notes.xml  ic_sinewave.xml
app/src/main/res/drawable-v24/: ic_launcher_background.xml
app/src/main/res/layout/: activity_main.xml  fragment_about.xml  fragment_amp_envelope.xml  fragment_control_panel.xml  fragment_filter.xml  fragment_keyboard.xml  fragment_main.xml  fragment_oscillator.xml  fragment_synth.xml  view_amp_envelope.xml  view_key.xml  view_osc.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: main_nav_graph.xml  nav_graph.xml  synth_nav_graph.xml
app/src/main/res/values/: attrs_keyboard_view.xml  colors.xml  strings.xml
app/src/main/res/values-night/: colors.xml
app/src/test/cpp/: AudioEngine_test.cpp  CMakeLists.txt  EnvelopeControlledAmplifier_test.cpp  Envelope_test.cpp  LowPassFilter_test.cpp  Oscillator_test.cpp  Pitch_test.cpp  SineWaveform_test.cpp  SquareWaveform_test.cpp  TriangleWaveform_test.cpp
app/src/test/cpp/synth/: AudioEngine_test.cpp  EnvelopeControlledAmplifier_test.cpp  Envelope_test.cpp  Oscillator_test.cpp  Pitch_test.cpp  SineWaveform_test.cpp  SquareWaveform_test.cpp  TriangleWaveform_test.cpp
app/src/test/cpp/util/: FloatUtil.h
app/src/test/java/com/flatmapdev/synth/aboutUi/: AboutFragmentTest.kt  AboutViewModelTest.kt
app/src/test/java/com/flatmapdev/synth/ampEnvelopeUi/: AmpEnvelopeFragmentTest.kt  AmpEnvelopeViewModelTest.kt
app/src/test/java/com/flatmapdev/synth/app/: GetApp.kt  TestApp.kt
app/src/test/java/com/flatmapdev/synth/controlPanelUi/: ControlPanelFragmentTest.kt
app/src/test/java/com/flatmapdev/synth/deviceData/: AndroidDeviceFeaturesAdapterTest.kt
app/src/test/java/com/flatmapdev/synth/filterUi/: FilterFragmentTest.kt  FilterViewModelTest.kt
app/src/test/java/com/flatmapdev/synth/keyboardUi/: KeyboardFragmentTest.kt
app/src/test/java/com/flatmapdev/synth/mainUi/: AmpEnvelopeViewModelTest.kt  MainActivityTest.kt  MainFragmentTest.kt  MainViewModelTest.kt  OscillatorViewModelTest.kt
app/src/test/java/com/flatmapdev/synth/oscillatorUi/: OscillatorFragmentTest.kt  OscillatorViewModelTest.kt
app/src/test/java/com/flatmapdev/synth/synthUi/: SynthFragmentTest.kt  SynthViewModelTest.kt
app/src/test/java/com/flatmapdev/synth/utils/: GetString.kt  LaunchAndSetUpFragment.kt  NavControllerFragmentFactory.kt  (+3 more)
gradle/wrapper/: gradle-wrapper.properties
(+105 files in other folders)
